--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
         "laravel-vite-plugin": "^0.7.4",
+        "typescript": "^4.9.5",
         "vite": "^4.1.4"
     },
     "dependencies": {
