--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,13 @@
         "moduleResolution": "node",
         "isolatedModules": true,
         "allowSyntheticDefaultImports": true,
-        "strict": true
+        "strict": true,
+        "baseUrl": "./",
+        "paths": {
+            "@/*": [
+                "resources/*"
+            ]
+        }
     },
     "include": [
         "resources/**/*"
