--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "lint": "eslint --fix ./resources"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.55.0",
         "@vitejs/plugin-vue": "^4.0.0",
+        "eslint": "^8.36.0",
+        "eslint-config-standard-with-typescript": "^34.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.6.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-vue": "^9.9.0",
         "laravel-vite-plugin": "^0.7.4",
         "typescript": "^4.9.5",
         "vite": "^4.1.4"
