--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "lint": "eslint --fix ./resources"
     },
     "devDependencies": {
+        "@quasar/vite-plugin": "^1.3.0",
         "@typescript-eslint/eslint-plugin": "^5.55.0",
         "@vitejs/plugin-vue": "^4.0.0",
         "eslint": "^8.36.0",
@@ -15,10 +16,13 @@
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-vue": "^9.9.0",
         "laravel-vite-plugin": "^0.7.4",
+        "sass": "^1.32.12",
         "typescript": "^4.9.5",
         "vite": "^4.1.4"
     },
     "dependencies": {
+        "@quasar/extras": "^1.15.11",
+        "quasar": "^2.11.7",
         "vue": "^3.2.47"
     }
 }
