--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "rules": {
         "semi": ["error", "always"],
         "@typescript-eslint/semi": ["error", "always"],
-        "indent": ["error", 4]
+        "indent": ["error", 4],
+        "@typescript-eslint/indent": ["error", 4]
     }
 }
