--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "module": "ES6",
+        "target": "ESNext",
+        "module": "ESNext",
         "moduleResolution": "node",
         "isolatedModules": true,
         "allowSyntheticDefaultImports": true,
