--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@quasar/extras": "^1.15.11",
         "quasar": "^2.11.7",
-        "vue": "^3.2.47"
+        "vue": "^3.2.47",
+        "vue-router": "^4.1.6"
     }
 }
